{
  "version": 4,
  "terraform_version": "1.0.5",
  "serial": 172,
  "lineage": "8fa6203e-cc03-fe63-cca4-9ba17f6ea435",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-02ea8def0171f3177",
            "domain": "vpc",
            "id": "eipalloc-0fd1dea3ddbe6fda8",
            "network_border_group": "us-west-2",
            "network_interface": "eni-0ffc27dd1d968c5da",
            "private_dns": "ip-10-14-0-24.us-west-2.compute.internal",
            "private_ip": "10.14.0.24",
            "public_dns": "ec2-44-238-127-248.us-west-2.compute.amazonaws.com",
            "public_ip": "44.238.127.248",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "Creator": "Claire B",
              "Manager": "Terraform"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "orchestrate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ceee60bcb94f60cd",
            "arn": "arn:aws:ec2:us-west-2:289921858159:instance/i-098076152c911bcdc",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-098076152c911bcdc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-015a3c29ba1724a85",
            "private_dns": "ip-10-14-0-186.us-west-2.compute.internal",
            "private_ip": "10.14.0.186",
            "public_dns": "ec2-54-185-164-204.us-west-2.compute.amazonaws.com",
            "public_ip": "54.185.164.204",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05e2e20c735674abf",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07a55cd91e18ae787",
            "tags_all": {
              "Creator": "Claire B",
              "Manager": "Terraform"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-066e5ea8e43b3baae"
            ]
          },
          "dependencies": [
            "aws_security_group.ssh_sg",
            "aws_subnet.sub_pub_1",
            "data.aws_ami.ubuntu_2004"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "zk_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ceee60bcb94f60cd",
            "arn": "arn:aws:ec2:us-west-2:289921858159:instance/i-0bea87330220e889e",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bea87330220e889e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0cdb966ef975748fe",
            "private_dns": "ip-10-14-0-30.us-west-2.compute.internal",
            "private_ip": "10.14.0.30",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06a32c1f67a2df3e1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07a55cd91e18ae787",
            "tags_all": {
              "Creator": "Claire B",
              "Manager": "Terraform"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-066e5ea8e43b3baae",
              "sg-0d5f5c252cdc40e79"
            ]
          },
          "dependencies": [
            "aws_subnet.sub_pub_1",
            "aws_vpc.kafka",
            "data.aws_ami.ubuntu_2004",
            "aws_security_group.ssh_sg",
            "aws_security_group.zk_sg",
            "aws_subnet.sub_priv_1",
            "aws_subnet.sub_priv_2",
            "aws_subnet.sub_priv_3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "zk_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ceee60bcb94f60cd",
            "arn": "arn:aws:ec2:us-west-2:289921858159:instance/i-0ba14ce9c826b63b0",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ba14ce9c826b63b0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0aa946b00c718ab09",
            "private_dns": "ip-10-14-1-81.us-west-2.compute.internal",
            "private_ip": "10.14.1.81",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0cef08543d9b75ced",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01379315b3307f524",
            "tags_all": {
              "Creator": "Claire B",
              "Manager": "Terraform"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-066e5ea8e43b3baae",
              "sg-0d5f5c252cdc40e79"
            ]
          },
          "dependencies": [
            "aws_security_group.zk_sg",
            "aws_subnet.sub_priv_1",
            "aws_subnet.sub_priv_2",
            "aws_subnet.sub_priv_3",
            "aws_subnet.sub_pub_2",
            "aws_vpc.kafka",
            "data.aws_ami.ubuntu_2004",
            "aws_security_group.ssh_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "zk_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ceee60bcb94f60cd",
            "arn": "arn:aws:ec2:us-west-2:289921858159:instance/i-0c96fd27ab4f44ded",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c96fd27ab4f44ded",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b98ee8f7b8963603",
            "private_dns": "ip-10-14-2-7.us-west-2.compute.internal",
            "private_ip": "10.14.2.7",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07d15598a2f344591",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e33612faba953530",
            "tags_all": {
              "Creator": "Claire B",
              "Manager": "Terraform"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-066e5ea8e43b3baae",
              "sg-0d5f5c252cdc40e79"
            ]
          },
          "dependencies": [
            "aws_security_group.zk_sg",
            "aws_subnet.sub_priv_1",
            "aws_subnet.sub_priv_2",
            "aws_subnet.sub_priv_3",
            "aws_subnet.sub_pub_3",
            "aws_vpc.kafka",
            "data.aws_ami.ubuntu_2004",
            "aws_security_group.ssh_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "kafka",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:289921858159:internet-gateway/igw-0470fddbe9fff9ef4",
            "id": "igw-0470fddbe9fff9ef4",
            "owner_id": "289921858159",
            "tags": {
              "Name": "cbeamerkafka"
            },
            "tags_all": {
              "Creator": "Claire B",
              "Manager": "Terraform",
              "Name": "cbeamerkafka"
            },
            "vpc_id": "vpc-0288853e69f8af82e"
          },
          "dependencies": [
            "aws_vpc.kafka"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "kafka",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fd1dea3ddbe6fda8",
            "connectivity_type": "public",
            "id": "nat-0a5f15170cb0b15c7",
            "network_interface_id": "eni-0ffc27dd1d968c5da",
            "private_ip": "10.14.0.24",
            "public_ip": "44.238.127.248",
            "subnet_id": "subnet-07a55cd91e18ae787",
            "tags": {
              "Name": "cbeamerkafka-ngw"
            },
            "tags_all": {
              "Creator": "Claire B",
              "Manager": "Terraform",
              "Name": "cbeamerkafka-ngw"
            }
          },
          "dependencies": [
            "aws_eip.ngw",
            "aws_subnet.sub_pub_1",
            "aws_vpc.kafka"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:289921858159:route-table/rtb-04c542256fb03ae6d",
            "id": "rtb-04c542256fb03ae6d",
            "owner_id": "289921858159",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0470fddbe9fff9ef4",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {
              "Creator": "Claire B",
              "Manager": "Terraform"
            },
            "vpc_id": "vpc-0288853e69f8af82e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.kafka",
            "aws_vpc.kafka"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:289921858159:route-table/rtb-0b90675356da3a0de",
            "id": "rtb-0b90675356da3a0de",
            "owner_id": "289921858159",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0a5f15170cb0b15c7",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {
              "Creator": "Claire B",
              "Manager": "Terraform"
            },
            "vpc_id": "vpc-0288853e69f8af82e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.kafka",
            "aws_vpc.kafka"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "priv_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b5fca2bc1873ba03",
            "route_table_id": "rtb-0b90675356da3a0de",
            "subnet_id": "subnet-09692a3f9af623a4d"
          },
          "dependencies": [
            "aws_vpc.kafka",
            "aws_eip.ngw",
            "aws_nat_gateway.kafka",
            "aws_route_table.ngw",
            "aws_subnet.sub_priv_1",
            "aws_subnet.sub_pub_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "priv_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00ae5c387aad3038f",
            "route_table_id": "rtb-0b90675356da3a0de",
            "subnet_id": "subnet-0a60dcf0268366f3e"
          },
          "dependencies": [
            "aws_eip.ngw",
            "aws_nat_gateway.kafka",
            "aws_route_table.ngw",
            "aws_subnet.sub_priv_2",
            "aws_subnet.sub_pub_1",
            "aws_vpc.kafka"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "priv_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a7e10f9b477224bb",
            "route_table_id": "rtb-0b90675356da3a0de",
            "subnet_id": "subnet-09ccea9755453f9dc"
          },
          "dependencies": [
            "aws_vpc.kafka",
            "aws_eip.ngw",
            "aws_nat_gateway.kafka",
            "aws_route_table.ngw",
            "aws_subnet.sub_priv_3",
            "aws_subnet.sub_pub_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e83f10f0a161bf8b",
            "route_table_id": "rtb-04c542256fb03ae6d",
            "subnet_id": "subnet-07a55cd91e18ae787"
          },
          "dependencies": [
            "aws_route_table.igw",
            "aws_subnet.sub_pub_1",
            "aws_vpc.kafka",
            "aws_internet_gateway.kafka"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-032d9245b6f59f6b7",
            "route_table_id": "rtb-04c542256fb03ae6d",
            "subnet_id": "subnet-01379315b3307f524"
          },
          "dependencies": [
            "aws_vpc.kafka",
            "aws_internet_gateway.kafka",
            "aws_route_table.igw",
            "aws_subnet.sub_pub_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-012dfe4e70fc853f6",
            "route_table_id": "rtb-04c542256fb03ae6d",
            "subnet_id": "subnet-0e33612faba953530"
          },
          "dependencies": [
            "aws_internet_gateway.kafka",
            "aws_route_table.igw",
            "aws_subnet.sub_pub_3",
            "aws_vpc.kafka"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:289921858159:security-group/sg-066e5ea8e43b3baae",
            "description": "Allow SSH connections",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-066e5ea8e43b3baae",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH connections",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "cbeamer-ssh-kafka-sg",
            "name_prefix": "",
            "owner_id": "289921858159",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "Creator": "Claire B",
              "Manager": "Terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0288853e69f8af82e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.kafka"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "zk_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:289921858159:security-group/sg-0d5f5c252cdc40e79",
            "description": "Allow Zookeeper client and server communication",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d5f5c252cdc40e79",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ZK web port",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "10.14.3.0/24",
                  "10.14.4.0/24",
                  "10.14.5.0/24"
                ],
                "description": "ZK client connections",
                "from_port": 2181,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2181
              },
              {
                "cidr_blocks": [
                  "10.14.3.0/24",
                  "10.14.4.0/24",
                  "10.14.5.0/24"
                ],
                "description": "ZK peer port",
                "from_port": 2888,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2888
              },
              {
                "cidr_blocks": [
                  "10.14.3.0/24",
                  "10.14.4.0/24",
                  "10.14.5.0/24"
                ],
                "description": "ZK peer port",
                "from_port": 3888,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3888
              }
            ],
            "name": "cbeamer-zk-communication",
            "name_prefix": "",
            "owner_id": "289921858159",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "Creator": "Claire B",
              "Manager": "Terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0288853e69f8af82e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.sub_priv_1",
            "aws_subnet.sub_priv_2",
            "aws_subnet.sub_priv_3",
            "aws_vpc.kafka"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sub_priv_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:289921858159:subnet/subnet-09692a3f9af623a4d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.14.3.0/24",
            "id": "subnet-09692a3f9af623a4d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "289921858159",
            "tags": {
              "Name": "cbeamer-sub_priv_1"
            },
            "tags_all": {
              "Creator": "Claire B",
              "Manager": "Terraform",
              "Name": "cbeamer-sub_priv_1"
            },
            "vpc_id": "vpc-0288853e69f8af82e"
          },
          "dependencies": [
            "aws_vpc.kafka"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sub_priv_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:289921858159:subnet/subnet-0a60dcf0268366f3e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.14.4.0/24",
            "id": "subnet-0a60dcf0268366f3e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "289921858159",
            "tags": {
              "Name": "cbeamer-sub_priv_2"
            },
            "tags_all": {
              "Creator": "Claire B",
              "Manager": "Terraform",
              "Name": "cbeamer-sub_priv_2"
            },
            "vpc_id": "vpc-0288853e69f8af82e"
          },
          "dependencies": [
            "aws_vpc.kafka"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sub_priv_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:289921858159:subnet/subnet-09ccea9755453f9dc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.14.5.0/24",
            "id": "subnet-09ccea9755453f9dc",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "289921858159",
            "tags": {
              "Name": "cbeamer-sub_priv_3"
            },
            "tags_all": {
              "Creator": "Claire B",
              "Manager": "Terraform",
              "Name": "cbeamer-sub_priv_3"
            },
            "vpc_id": "vpc-0288853e69f8af82e"
          },
          "dependencies": [
            "aws_vpc.kafka"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sub_pub_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:289921858159:subnet/subnet-07a55cd91e18ae787",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.14.0.0/24",
            "id": "subnet-07a55cd91e18ae787",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "289921858159",
            "tags": {
              "Name": "cbeamer-sub_pub_1"
            },
            "tags_all": {
              "Creator": "Claire B",
              "Manager": "Terraform",
              "Name": "cbeamer-sub_pub_1"
            },
            "vpc_id": "vpc-0288853e69f8af82e"
          },
          "dependencies": [
            "aws_vpc.kafka"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sub_pub_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:289921858159:subnet/subnet-01379315b3307f524",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.14.1.0/24",
            "id": "subnet-01379315b3307f524",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "289921858159",
            "tags": {
              "Name": "cbeamer-sub_pub_2"
            },
            "tags_all": {
              "Creator": "Claire B",
              "Manager": "Terraform",
              "Name": "cbeamer-sub_pub_2"
            },
            "vpc_id": "vpc-0288853e69f8af82e"
          },
          "dependencies": [
            "aws_vpc.kafka"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sub_pub_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:289921858159:subnet/subnet-0e33612faba953530",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.14.2.0/24",
            "id": "subnet-0e33612faba953530",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "289921858159",
            "tags": {
              "Name": "cbeamer-sub_pub_3"
            },
            "tags_all": {
              "Creator": "Claire B",
              "Manager": "Terraform",
              "Name": "cbeamer-sub_pub_3"
            },
            "vpc_id": "vpc-0288853e69f8af82e"
          },
          "dependencies": [
            "aws_vpc.kafka"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "kafka",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:289921858159:vpc/vpc-0288853e69f8af82e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.14.0.0/16",
            "default_network_acl_id": "acl-04896020b3528536c",
            "default_route_table_id": "rtb-07ad96adefc762e6d",
            "default_security_group_id": "sg-0ad58e6ca8a3c9a0c",
            "dhcp_options_id": "dopt-27e47f5f",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0288853e69f8af82e",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-07ad96adefc762e6d",
            "owner_id": "289921858159",
            "tags": {
              "Name": "cbeamer-kafka_vpc"
            },
            "tags_all": {
              "Creator": "Claire B",
              "Manager": "Terraform",
              "Name": "cbeamer-kafka_vpc"
            }
          }
        }
      ]
    }
  ]
}